[workspace]
members = [
  "client",
  "common",
  "server",
  "derive"
]

[workspace.dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
bytes = "1.4.0"
clap = { version = "4.3.0", features = ["derive", "env"] }
chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
rustls-pemfile = "1.0.2"
flexi_logger = "0.25.5"
futures = "0.3.28"
bud-common = { version = "0.1.0", path = "./common" }
bud-derive = { version = "0.1.0", path = "./derive" }
log = "0.4.18"
openssl = { version = "0.10.53", features = ["vendored"] }
roaring = "0.10.1"
s2n-quic = { version = "1.21.0", features = ["provider-address-token-default", "provider-tls-rustls"] }
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
signal-hook = "0.3.15"
tokio = "1.28.2"
tokio-util = { version = "0.7.8", features = ["codec"] }
