[package]
name = "bud-common"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait.workspace = true
bytes.workspace = true
chrono.workspace = true
futures.workspace = true
log.workspace = true
openssl.workspace = true
parking_lot = "0.12.1"
rustls-pemfile.workspace = true
s2n-quic.workspace = true
tokio.workspace = true
tokio-util.workspace = true
