[package]
name = "bud-common"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait.workspace = true
bytes.workspace = true
futures.workspace = true
log.workspace = true
openssl.workspace = true
parking_lot = "0.12.1"
rustls-pemfile.workspace = true
s2n-quic.workspace = true
tokio.workspace = true
tokio-util.workspace = true
bud-derive = { version = "0.1.0", path = "../derive" }
bonsaidb = { version = "0.4.1", features = ["local", "local-async"], optional = true }
chrono.workspace = true
thiserror.workspace = true
