[package]
name = "libbud"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.4.0"
futures = "0.3.26"
log = "0.4.17"
once_cell = "1.17.1"
roaring = "0.10.1"
rustls-pemfile = "1.0.2"
s2n-quic = { version = "1.16.0", features = ["provider-address-token-default", "provider-tls-rustls"] }
tokio = { version = "1.26.0", features = ["rt", "io-util", "time", "sync"] }
tokio-util = { version = "0.7.7", features = ["codec"] }
