[package]
name = "bud-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
clap.workspace = true
flexi_logger.workspace = true
log.workspace = true
tokio = { workspace = true, features = [ "rt-multi-thread" ] }
libbud-server.workspace = true
libbud-common.workspace = true
signal-hook-tokio.workspace = true
signal-hook.workspace = true
futures.workspace = true
