[package]
name = "bud-server"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes.workspace = true
futures.workspace = true
bud-common.workspace = true
bud-derive.workspace = true
log.workspace = true
roaring.workspace = true
s2n-quic.workspace = true
tokio.workspace = true
tokio-util.workspace = true
chrono.workspace = true
thiserror.workspace = true

[dev-dependencies]
anyhow.workspace = true
clap.workspace = true
flexi_logger.workspace = true
log.workspace = true
tokio = { workspace = true, features = [ "rt-multi-thread" ] }
signal-hook-tokio.workspace = true
signal-hook.workspace = true
futures.workspace = true
redis = { version = "0.23.0", features = ["tokio-comp"] }
mongodb = { version = "2.6.0", features = ["bson-chrono-0_4"] }
url = "2.4.0"

[features]
bonsaidb = ["bud-common/bonsaidb"]
mongodb = ["bud-common/mongodb"]
redis = ["bud-common/redis", "bud-common/serde_json"]
