[package]
name = "libbud-client"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { workspace = true }
futures = { workspace = true }
libbud-common = { workspace = true }
log = { workspace = true }
s2n-quic = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
