[package]
name = "libbud-server"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { workspace = true }
futures = { workspace = true }
libbud-common = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
roaring = { workspace = true }
s2n-quic = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }

[features]
default = [ "memory" ]
memory = []
persist = []
